python-app/template/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dmatrix-python-app
spec:
  selector:
    app: dmatrix-python-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5001
